# calibre-web-bot

./: .env  .gitignore  Cargo.toml
src/: docker.rs  errors.rs  main.rs  util.rs
