[package]
name = "calibre-web-bot"
authors = ["Oskar Manhart <52569953+oskardotglobal@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"

[dependencies]
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
bollard = "0.14.0"
url = "*"