[package]
name = "calibre-web-bot"
authors = ["Oskar Manhart <52569953+oskardotglobal@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
bollard = "0.14.0"
url = "2.4.0"
pretty_env_logger = "0.5.0"
log = "0.4.19"
thiserror = "1.0.43"
reqwest = "0.11.18"
serde = "1.0.167"
scraper = "0.17.1"
url-escape = "0.1.1"
serde_json = "1.0.67"